<resources>
    <string name="app_name">LSMShopping</string>
    <string name="title_string">Shopping List</string>
    <string name="btn_title_back">Back</string>
    <string name="btn_title_list">List</string>
    <string name="btn_title_Add">Add</string>
    <string name="shopping_list_str">Shopping List</string>
    <string name="quantity_str_hint">Quantity</string>
    <string name="add_name">Name</string>
    <string name="add_tag">Tag</string>
    <string name="add_comment">Comment</string>
    <string name="add_name_hint">Name</string>
    <string name="add_comment_hint">Comment</string>
    <string name="money_symbol">$</string>
    <string name="Purchased_Str">Recent Purchased Items</string>
    <string name="Added_Items">Added Items</string>
    <string name="Expenditure">Expenditure</string>
    <string name="Finish">Finish</string>
    <string name="Finish_Btn">Finish</string>
    <string name="Share">Share</string>
    <string name="Search">Search names or tags</string>
    <string name="start_date">Start</string>
    <string name="end_date">End</string>
    <string name="select_date_hint">Click Button to Select Date</string>
    <string name="quantity_symbol">x</string>
    <string name="expenditure_total">Total :</string>
</resources>
